# ble-mesh-provisioner

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/cjson/: CMakeLists.txt  json.cpp  json.hpp
components/esp32-ble-mesh/: CMakeLists.txt  mesh_callbacks.cpp
components/esp32-ble-mesh/core/: ble_mesh_dev.cpp  ble_mesh_node.cpp  ble_mesh_prov.cpp  ble_mesh_provisioner.cpp
components/esp32-ble-mesh/include/: ble_context.h  ble_mesh_model.h  ble_mesh_prov.h  callbacks.h
components/esp32-ble-mesh/include/models/foundation/: ble_mesh_config_cli.h
components/esp32-ble-mesh/include/models/generic/: generic_on_off_models.h
components/esp32-ble-mesh/include/models/light/: ble_mesh_light_hsl_models.h  (+1 more)
components/esp32-ble-mesh/models/: ble_mesh_model.cpp
components/esp32-ble-mesh/models/foundation/: ble_mesh_config_cli.cpp
components/esp32-ble-mesh/models/generic/: generic_model.cpp  generic_on_off_client.cpp
components/esp_lcd_touch_gt911/: esp_lcd_touch_gt911.c
main/: CMakeLists.txt  apps.cpp  idf_component.yml  main.cpp
main/apps/cli-nodes/: hsl_cli_app.cpp  level_cli_app.cpp  on_off_cli_app.cpp
main/apps/include/: all_nodes_app.h  hsl_cli_app.h  level_cli_app.h  on_off_cli_app.h  provisioner_app.h
main/apps/provisioner/: all_nodes_app.cpp  provisioner_app.cpp
main/ble-mesh/: main.cpp
main/include/: _lvgl.h  mesh.h  models.h
main/lvgl/: modal_element.cpp  screen1.cpp  screen2.cpp  screen3.cpp  screen4.cpp  screen5.cpp  top_menu.cpp
main/lvgl/models/: model_1000.cpp  model_1002.cpp  model_1307.cpp
