idf_component_register(SRCS 
                    "main.cpp" 
                    "lvgl/top_menu.cpp"
                    "lvgl/screen1.cpp"
                    "lvgl/screen2.cpp"
                    "lvgl/screen3.cpp"
                    "lvgl/screen4.cpp"
                    "lvgl/modal_element.cpp"

                    "lvgl/models/model_1000.cpp"
                    "lvgl/models/model_1002.cpp"

                    "ble-mesh/main.cpp"
                    INCLUDE_DIRS "." "include")
